WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282969
[iOS] media/media-video-fullrange.html is an intermittent failure
https://bugs.webkit.org/show_bug.cgi?id=282969
Summary
[iOS] media/media-video-fullrange.html is an intermittent failure
Jean-Yves Avenard [:jya]
Reported
2024-11-11 21:36:34 PST
This test fails in the iOS 17 simulator ``` --- /Volumes/Data/worker/iOS-17-Simulator-WK2-Tests-EWS/build/layout-test-results/media/media-video-videorange-expected.txt +++ /Volumes/Data/worker/iOS-17-Simulator-WK2-Tests-EWS/build/layout-test-results/media/media-video-videorange-actual.txt @@ -1,3 +1,5 @@ +FAIL: Timed out waiting for notifyDone to be called + EVENT(loadedmetadata) EXPECTED (pixelData[0] == '0') OK @@ -28,17 +30,4 @@ EXPECTED (pixelData[1] >= '253') OK EXPECTED (pixelData[2] <= '2') OK EVENT(loadedmetadata) -EXPECTED (pixelData[0] == '0') OK -EXPECTED (pixelData[1] == '0') OK -EXPECTED (pixelData[2] == '0') OK -EXPECTED (pixelData[0] >= '253') OK -EXPECTED (pixelData[1] >= '253') OK -EXPECTED (pixelData[2] <= '2') OK -EVENT(loadedmetadata) -EXPECTED (pixelData[0] == '0') OK -EXPECTED (pixelData[1] == '0') OK -EXPECTED (pixelData[2] == '0') OK -EXPECTED (pixelData[0] >= '253') OK -EXPECTED (pixelData[1] >= '253') OK -EXPECTED (pixelData[2] <= '2') OK ``` Manual experimentation shows that neither the play() nor the rVFC promise are resolved when the video element isn't in the DOM. This is related to
bug 282797
and
bug 282782
; but different. This occurs when we are using a WebCoreDecompressionSession to perform the decoding instead of an AVSBDL.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-11 21:36:52 PST
<
rdar://problem/139698133
>
Jean-Yves Avenard [:jya]
Comment 2
2024-11-12 04:26:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36522
EWS
Comment 3
2024-11-13 03:41:09 PST
Committed
286525@main
(a12fb9d56204): <
https://commits.webkit.org/286525@main
> Reviewed commits have been landed. Closing PR #36522 and removing active labels.
Ben Schwartz
Comment 4
2025-02-21 12:12:01 PST
***
Bug 263413
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug